reduce fetch retry pressure and fix hazard list overflow styling

--- a/server/styles/scss/_hazard-list.scss
+++ b/server/styles/scss/_hazard-list.scss
@@ -56,7 +56,7 @@
 
 				.location {
 					width: 34%;
-					overflow: visible;
+					overflow: hidden;
 					text-overflow: ellipsis;
 					white-space: nowrap;
 					color: #fff;
